--- a/website/src/content/docs/docs/libraries/azure-resource-manager/reference/index.mdx
+++ b/website/src/content/docs/docs/libraries/azure-resource-manager/reference/index.mdx
@@ -270,7 +270,12 @@ npm install --save-peer @azure-tools/typespec-azure-resource-manager
 
 - [`@customAzureResource`](./decorators.md#@Azure.ResourceManager.Legacy.customAzureResource)
 
+### Interfaces
+
+- [`LegacyOperations`](./interfaces.md#Azure.ResourceManager.Legacy.LegacyOperations)
+
 ### Models
 
 - [`ManagedServiceIdentityV4`](./data-types.md#Azure.ResourceManager.Legacy.ManagedServiceIdentityV4)
 - [`ManagedServiceIdentityV4Property`](./data-types.md#Azure.ResourceManager.Legacy.ManagedServiceIdentityV4Property)
+- [`Provider`](./data-types.md#Azure.ResourceManager.Legacy.Provider)
