update changelog accordingly

--- a/.chronus/changes/fix-2072-2025-0-21-15-49-15.md
+++ b/.chronus/changes/fix-2072-2025-0-21-15-49-15.md
@@ -4,4 +4,4 @@ packages:
   - "@azure-tools/typespec-client-generator-core"
 ---
 
-Add a `resultProperties` property to `SdkLroServiceFinalResponse` and deprecate `resultPath` property.
+Add a `resultSegments` property to `SdkLroServiceFinalResponse` and deprecate `resultPath` property. Add a `resultSegments` property to `SdkMethodResponse`.
