Add @externalTypeRef decorator to give a solution for duplicated common types on compute  (#2091)
This will be part of Legacy as for now is intended and planned for
compute use.
Issue: https://github.com/Azure/typespec-azure/issues/2058

---------

Co-authored-by: Allen Zhang <allenzhang@live.com>

--- a/website/src/content/docs/docs/libraries/azure-resource-manager/reference/index.mdx
+++ b/website/src/content/docs/docs/libraries/azure-resource-manager/reference/index.mdx
@@ -269,6 +269,7 @@ npm install --save-peer @azure-tools/typespec-azure-resource-manager
 ### Decorators
 
 - [`@customAzureResource`](./decorators.md#@Azure.ResourceManager.Legacy.customAzureResource)
+- [`@externalTypeRef`](./decorators.md#@Azure.ResourceManager.Legacy.externalTypeRef)
 
 ### Models
 
