--- a/website/src/content/docs/docs/howtos/Generate client libraries/10longRunningOperations.mdx
+++ b/website/src/content/docs/docs/howtos/Generate client libraries/10longRunningOperations.mdx
@@ -64,6 +64,26 @@ Long-running operation to delete a resource.
 <ClientTabs>
 
 ```typespec
+alias ResourceOperations = global.Azure.Core.ResourceOperations<NoConditionalRequests &
+  NoRepeatableRequests &
+  NoClientRequestId>;
+
+/** Details about a user. */
+@resource("users")
+model User {
+  /** The name of user. */
+  @key
+  @visibility("read")
+  name: string;
+
+  /** The role of user */
+  role: string;
+}
+
+// Operation for polling the status of the LRO. SDK may exclude this operation from client.
+@sharedRoute
+op getOperationStatus is ResourceOperations.GetResourceOperationStatus<User, never>;
+
 @pollingOperation(getOperationStatus)
 op delete is ResourceOperations.LongRunningResourceDelete<User>;
 ```
@@ -93,6 +113,10 @@ Long-running operation to invoke an action on a resource.
 <ClientTabs>
 
 ```typespec
+alias ResourceOperations = global.Azure.Core.ResourceOperations<NoConditionalRequests &
+  NoRepeatableRequests &
+  NoClientRequestId>;
+
 /** Details about a user. */
 @resource("users")
 model User {
