--- a/website/src/content/docs/docs/howtos/Generate client libraries/10longRunningOperations.mdx
+++ b/website/src/content/docs/docs/howtos/Generate client libraries/10longRunningOperations.mdx
@@ -33,6 +33,7 @@ model User {
 @sharedRoute
 op getOperationStatus is ResourceOperations.GetResourceOperationStatus<User, never>;
 
+/** Create or replace the User. */
 @pollingOperation(getOperationStatus)
 op createOrReplace is ResourceOperations.LongRunningResourceCreateOrReplace<User>;
 ```
@@ -84,6 +85,7 @@ model User {
 @sharedRoute
 op getOperationStatus is ResourceOperations.GetResourceOperationStatus<User, never>;
 
+/** Delete the User. */
 @pollingOperation(getOperationStatus)
 op delete is ResourceOperations.LongRunningResourceDelete<User>;
 ```
@@ -149,6 +151,7 @@ model ExportedUser {
 @sharedRoute
 op getExportOperationStatus is ResourceOperations.GetResourceOperationStatus<User, ExportedUser>;
 
+/** Action to export the data of the User. */
 @pollingOperation(getExportOperationStatus)
 op export is ResourceOperations.LongRunningResourceAction<User, UserExportParams, ExportedUser>;
 ```
