--- a/website/src/content/docs/docs/howtos/Generate client libraries/11etag.mdx
+++ b/website/src/content/docs/docs/howtos/Generate client libraries/11etag.mdx
@@ -34,11 +34,11 @@ def get(self, *, etag: Optional[str] = None, match_condition: Optional[MatchCond
 ```
 
 ```csharp
-
+# TODO
 ```
 
 ```typescript
-
+# TODO
 ```
 
 ```java
@@ -48,7 +48,7 @@ public Response get(MatchConditions matchConditions);
 ```
 
 ```go
-
+# TODO
 ```
 
 </ClientTabs>
