--- a/website/src/content/docs/docs/howtos/Generate client libraries/11etag.mdx
+++ b/website/src/content/docs/docs/howtos/Generate client libraries/11etag.mdx
@@ -48,7 +48,7 @@ public Response get(MatchConditions matchConditions);
 ```
 
 ```go
-# TODO
+func (client *Client) Get(ctx context.Context, options *ClientGetOptions) (ClientGetResponse, error)
 ```
 
 </ClientTabs>
