Update the typescript comments

--- a/website/src/content/docs/docs/howtos/Generate client libraries/04renaming.mdx
+++ b/website/src/content/docs/docs/howtos/Generate client libraries/04renaming.mdx
@@ -92,6 +92,7 @@ namespace PetStoreNamespace
 ```
 
 ```typescript
+// Here is the generated code for TypeScript RLC
 interface InputModel {
   name: string;
 }
@@ -173,7 +174,7 @@ namespace PetStoreNamespace
 ```
 
 ```typescript
-// Typescript do not change behavior based on protocolAPI or convenientAPI
+// TypeScript RLC won't change behavior based on protocolAPI or convenientAPI
 ```
 
 ```java
@@ -237,7 +238,7 @@ namespace PetStoreNamespace
 ```
 
 ```typescript
-// Typescript do not change behavior based on protocolAPI or convenientAPI
+// TypeScript RLC won't change behavior based on protocolAPI or convenientAPI
 ```
 
 ```java
