Update the specs

--- a/website/src/content/docs/docs/howtos/Generate client libraries/04renaming.mdx
+++ b/website/src/content/docs/docs/howtos/Generate client libraries/04renaming.mdx
@@ -31,11 +31,11 @@ using Azure.Core;
 using TypeSpec.Versioning;
 
 @service({
-  title: "Contoso Widget Manager",
+  title: "Pet Store Client",
 })
 @server(
   "{endpoint}/widget",
-  "Contoso Widget APIs",
+  "Pet Store APIs",
   {
     endpoint: string,
   }
