update java code

--- a/website/src/content/docs/docs/howtos/Generate client libraries/13pagingOperations.mdx
+++ b/website/src/content/docs/docs/howtos/Generate client libraries/13pagingOperations.mdx
@@ -49,7 +49,7 @@ model UserList {
 ```
 
 ```java
-// TODO
+public PagedIterable<User> listWithPage();
 ```
 
 </ClientTabs>
@@ -89,7 +89,7 @@ model UserList {
 ```
 
 ```java
-// TODO
+public PagedIterable<User> listWithPage();
 ```
 
 </ClientTabs>
@@ -135,7 +135,7 @@ model UserList {
 ```
 
 ```java
-// TODO
+NOT_SUPPORTED
 ```
 
 </ClientTabs>
@@ -175,7 +175,7 @@ model UserList {
 ```
 
 ```java
-// TODO
+NOT_SUPPORTED
 ```
 
 </ClientTabs>
@@ -214,7 +214,7 @@ model User {
 ```
 
 ```java
-// TODO
+NOT_SUPPORTED
 ```
 
 </ClientTabs>
@@ -253,7 +253,7 @@ model User {
 ```
 
 ```java
-// TODO
+NOT_SUPPORTED
 ```
 
 </ClientTabs>
