--- a/website/src/content/docs/docs/howtos/Generate client libraries/13pagingOperations.mdx
+++ b/website/src/content/docs/docs/howtos/Generate client libraries/13pagingOperations.mdx
@@ -106,7 +106,7 @@ Continuation token should be annotated in one of the request parameter with `@co
 
 ```typespec
 @list
-op listWithPage(@query @continuationToken token?: string): UserList;
+op listWithPage(@query @continuationToken continuationToken?: string): UserList;
 
 model User {
   id: string;
@@ -118,7 +118,7 @@ model UserList {
   value: User[];
 
   @continuationToken
-  nextToken?: string;
+  continuationToken?: string;
 }
 ```
 
@@ -146,7 +146,7 @@ NOT_SUPPORTED
 
 ```typespec
 @list
-op listWithPage(@header @continuationToken token?: string): UserList;
+op listWithPage(@header @continuationToken continuationToken?: string): UserList;
 
 model User {
   id: string;
@@ -158,7 +158,7 @@ model UserList {
   value: User[];
 
   @continuationToken
-  nextToken?: string;
+  continuationToken?: string;
 }
 ```
 
@@ -186,10 +186,10 @@ NOT_SUPPORTED
 
 ```typespec
 @list
-op listWithPage(@query @continuationToken token?: string): {
+op listWithPage(@query @continuationToken continuationToken?: string): {
   @header
   @continuationToken
-  nextToken?: string;
+  continuationToken?: string;
 
   @pageItems
   value: User[];
@@ -225,10 +225,10 @@ NOT_SUPPORTED
 
 ```typespec
 @list
-op listWithPage(@query @continuationToken token?: string): {
+op listWithPage(@query @continuationToken continuationToken?: string): {
   @header
   @continuationToken
-  nextToken?: string;
+  continuationToken?: string;
 
   @pageItems
   value: User[];
