--- a/website/src/content/docs/docs/howtos/Generate client libraries/13pagingOperations.mdx
+++ b/website/src/content/docs/docs/howtos/Generate client libraries/13pagingOperations.mdx
@@ -9,7 +9,7 @@ This doc details what emitters will generate for paging operations.
 ## Using next link to indicate how to get the next page
 
 Next link is an absolute url returned by the paging operation, which indicates how to get the next page.
-If the response does not return next link, it should be the last page.
+If the response does not return a next link, it indicates the last page of results.
 Next link should be annotated in response model with `@nextLink`.
 
 There are two ways to indicate the paging operation with `@nextLink`:
