Update website/src/content/docs/docs/howtos/Generate client libraries/13pagingOperations.mdx
Co-authored-by: Mark Cowlishaw <markcowl@microsoft.com>

--- a/website/src/content/docs/docs/howtos/Generate client libraries/13pagingOperations.mdx
+++ b/website/src/content/docs/docs/howtos/Generate client libraries/13pagingOperations.mdx
@@ -10,7 +10,7 @@ This doc details what emitters will generate for paging operations.
 
 Next link is an absolute url returned by the paging operation, which indicates how to get the next page.
 If the response does not return a next link, it indicates the last page of results.
-Next link should be annotated in response model with `@nextLink`.
+Next link should be annotated in the response model with `@nextLink`.
 
 There are two ways to indicate the paging operation with `@nextLink`:
 
