Update website/src/content/docs/docs/howtos/Generate client libraries/13pagingOperations.mdx
Co-authored-by: Mark Cowlishaw <markcowl@microsoft.com>

--- a/website/src/content/docs/docs/howtos/Generate client libraries/13pagingOperations.mdx
+++ b/website/src/content/docs/docs/howtos/Generate client libraries/13pagingOperations.mdx
@@ -12,7 +12,7 @@ Next link is an absolute url returned by the paging operation, which indicates h
 If the response does not return a next link, it indicates the last page of results.
 Next link should be annotated in the response model with `@nextLink`.
 
-There are two ways to indicate the paging operation with `@nextLink`:
+There are two ways to indicate a paging operation with `@nextLink`:
 
 1. Use `@pagedResult` and `@items` in `Azure.Core` lib.
 
