Update website/src/content/docs/docs/howtos/Generate client libraries/13pagingOperations.mdx
Co-authored-by: Mark Cowlishaw <markcowl@microsoft.com>

--- a/website/src/content/docs/docs/howtos/Generate client libraries/13pagingOperations.mdx
+++ b/website/src/content/docs/docs/howtos/Generate client libraries/13pagingOperations.mdx
@@ -54,7 +54,7 @@ public PagedIterable<User> listWithPage();
 
 </ClientTabs>
 
-2. Use `@list` and `@pageItems` in core.
+2. Use the `@list` and `@pageItems` decorators from TypeSpec core.
 
 <ClientTabs>
 
