--- a/website/src/content/docs/docs/howtos/Generate client libraries/13pagingOperations.mdx
+++ b/website/src/content/docs/docs/howtos/Generate client libraries/13pagingOperations.mdx
@@ -96,7 +96,7 @@ public PagedIterable<User> listWithPage();
 
 ## Using continuation token to indicate how to get the next page
 
-Continuation token is a string that returned by paging operation, which could be used as a parameter value for the paging operation to get the next page.
+A continuation token is a string returned by a paging operation, which is used as a parameter value for the paging operation to get the next page.
 If the response does not return continuation token, it should be the last page.
 Continuation token should be annotated in one of the request parameter with `@continuationToken`, as well as response model with `@continuationToken`.
 
