--- a/.chronus/changes/tcgc-flagsDocs-2025-2-10-17-39-18.md
+++ b/.chronus/changes/tcgc-flagsDocs-2025-2-10-17-39-18.md
@@ -4,4 +4,4 @@ packages:
   - "@azure-tools/typespec-client-generator-core"
 ---
 
-Refine all tcgc flags. Deprecate `flatten-union-as-enum` flag in `tspconfig.yaml`, and swith it to `flattenUnionAsEnum` in `CreateSdkContextOptions`.
+Refine all tcgc flags. Deprecate `flatten-union-as-enum` flag in `tspconfig.yaml`, and switch it to `flattenUnionAsEnum` in `CreateSdkContextOptions`.
