--- a/website/src/content/docs/docs/howtos/Generate client libraries/13license.mdx
+++ b/website/src/content/docs/docs/howtos/Generate client libraries/13license.mdx
@@ -8,16 +8,16 @@ This page explains how the license info is generated in the client code.
 
 ## Azure license
 
-For Azure scenarios, client code will always use the MIT license, and put the license info in the header of the generated code or in a separate file depending on the language.
+For Azure scenarios, client code will always use the MIT license and include the license info in the header of the generated code or in a separate file depending on the language.
 
-For example, this is the license comment in the generated code of Java client:
+For example, this is the license comment in the generated code of a Java client:
 
 ```java
 // Copyright (c) Microsoft Corporation. All rights reserved.
 // Licensed under the MIT License.
 ```
 
-This is the `LICENSE` file of Python client lib:
+This is the `LICENSE` file of a Python client library:
 
 ```text
 Copyright (c) Microsoft Corporation
@@ -38,24 +38,24 @@ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
 AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
-THE SOFTWARE.`,
+THE SOFTWARE.
 ```
 
 ## Unbranded license
 
-For unbranded scenarios, client code will have no license info if there is no license config in `tspconfig.yaml`.
-Spec authors can set the license info with the `license` config in the `tspconfig.yaml`:
+For unbranded scenarios, client code will have no license info if there is no license configuration in `tspconfig.yaml`.
+Spec authors can set the license info with the `license` configuration in the `tspconfig.yaml`:
 
 ```yaml
 license:
-  name: <License name. We have built in "MIT License", "Apache License 2.0", "BSD 3-Clause License", "MPL 2.0", "GPL-3.0" and "LGPL-3.0". For other licenses, you need to set the link, header and description manually.>
+  name: <License name. We have built-in "MIT License", "Apache License 2.0", "BSD 3-Clause License", "MPL 2.0", "GPL-3.0", and "LGPL-3.0". For other licenses, you need to set the link, header, and description manually.>
   company: <Company name used in copyright>
   link: <License link>
   header: <License header in the generated code>
-  description: <License description in the separated license file>
+  description: <License description in the separate license file>
 ```
 
-For example, if you config the license like the following, you will get the same license info as Azure scenarios:
+For example, if you configure the license like the following, you will get the same license info as Azure scenarios:
 
 ```yaml
 emit:
