Refine TCGC release notes.

--- a/website/src/content/docs/docs/release-notes/release-2025-03-18.mdx
+++ b/website/src/content/docs/docs/release-notes/release-2025-03-18.mdx
@@ -45,19 +45,19 @@ TypeSpec core contains Breaking Changes
 
 ### @azure-tools/typespec-client-generator-core
 
-- [#2298](https://github.com/Azure/typespec-azure/pull/2298) Add `pageItemsSegments` for `SdkPagingServiceMetadata` to indicate how to get page items from response.
-- [#2390](https://github.com/Azure/typespec-azure/pull/2390) Specific scope decorator should always override all-scopes decorator
+- [#2298](https://github.com/Azure/typespec-azure/pull/2298) Add `pageItemsSegments` for `SdkPagingServiceMetadata` to indicate how to get page items from response.
+- [#2390](https://github.com/Azure/typespec-azure/pull/2390) Specific scope decorator should always override all-scopes decorator.
 - [#2377](https://github.com/Azure/typespec-azure/pull/2377) Report diagnostic errors for discriminated unions.
 - [#2378](https://github.com/Azure/typespec-azure/pull/2378) Output auth related info in the yaml of code model.
 - [#2373](https://github.com/Azure/typespec-azure/pull/2373) Provide `listAllServiceNamespaces` to list service namespaces with versioning support.
 - [#2393](https://github.com/Azure/typespec-azure/pull/2393) Export `SdkEmitterOptionsSchema` for downstream emitter to add same options.
 - [#2353](https://github.com/Azure/typespec-azure/pull/2353) Add `licenseInfo` property of `LicenseInfo` type to `SdkPackage`, which is used to indicate the license for the package and could be configured by `license.name`, `license.company`, `license.link`, `license.header` and `license.description` in `tspconfig.yaml`.
 - [#2319](https://github.com/Azure/typespec-azure/pull/2319) Map all streaming request and response type to bytes.
-- [#2372](https://github.com/Azure/typespec-azure/pull/2372) Extend `@access` to also apply to `ModelProperty`s
-- [#2326](https://github.com/Azure/typespec-azure/pull/2326) Add `namespace` flag to tcgc
+- [#2372](https://github.com/Azure/typespec-azure/pull/2372) Extend `@access` to also apply to `ModelProperty`s.
+- [#2326](https://github.com/Azure/typespec-azure/pull/2326) Add `namespace` flag to tcgc.
 - [#2216](https://github.com/Azure/typespec-azure/pull/2216) Refine all tcgc flags. Deprecate `flatten-union-as-enum` flag in `tspconfig.yaml`, and switch it to `flattenUnionAsEnum` in `CreateSdkContextOptions`.
-- [#2305](https://github.com/Azure/typespec-azure/pull/2305) Move from projections to mutators
-- [#1208](https://github.com/Azure/typespec-azure/pull/1208) add linter rulesets to TCGC, for both generic and language-specific linter rules
+- [#2305](https://github.com/Azure/typespec-azure/pull/2305) Move from projections to mutators.
+- [#1208](https://github.com/Azure/typespec-azure/pull/1208) Add linter rulesets to TCGC, for both generic and language-specific linter rules.
 
 ## Bump dependencies
 
