update python part

--- a/website/src/content/docs/docs/howtos/Generate client libraries/13pagingOperations.mdx
+++ b/website/src/content/docs/docs/howtos/Generate client libraries/13pagingOperations.mdx
@@ -37,7 +37,12 @@ model UserList {
 ```
 
 ```python
-# TODO
+class User(_model_base.Model):
+    id: str = rest_field()
+    name: str = rest_field()
+
+def listWithPage(self, **kwargs: Any) -> Iterable["_models.User"]:
+    ...
 ```
 
 ```csharp
@@ -77,7 +82,12 @@ model UserList {
 ```
 
 ```python
-# TODO
+class User(_model_base.Model):
+    id: str = rest_field()
+    name: str = rest_field()
+
+def listWithPage(self, **kwargs: Any) -> Iterable["_models.User"]:
+    ...
 ```
 
 ```csharp
@@ -123,7 +133,12 @@ model UserList {
 ```
 
 ```python
-# TODO
+class User(_model_base.Model):
+    id: str = rest_field()
+    name: str = rest_field()
+
+def listWithPage(self, **kwargs: Any) -> Iterable["_models.User"]:
+    ...
 ```
 
 ```csharp
@@ -163,7 +178,12 @@ model UserList {
 ```
 
 ```python
-# TODO
+class User(_model_base.Model):
+    id: str = rest_field()
+    name: str = rest_field()
+
+def listWithPage(self, **kwargs: Any) -> Iterable["_models.User"]:
+    ...
 ```
 
 ```csharp
@@ -202,7 +222,12 @@ model User {
 ```
 
 ```python
-# TODO
+class User(_model_base.Model):
+    id: str = rest_field()
+    name: str = rest_field()
+
+def listWithPage(self, **kwargs: Any) -> Iterable["_models.User"]:
+    ...
 ```
 
 ```csharp
@@ -241,7 +266,12 @@ model User {
 ```
 
 ```python
-# TODO
+class User(_model_base.Model):
+    id: str = rest_field()
+    name: str = rest_field()
+
+def listWithPage(self, **kwargs: Any) -> Iterable["_models.User"]:
+    ...
 ```
 
 ```csharp
