--- a/website/src/content/docs/docs/howtos/Generate client libraries/13pagingOperations.mdx
+++ b/website/src/content/docs/docs/howtos/Generate client libraries/13pagingOperations.mdx
@@ -137,7 +137,7 @@ class User(_model_base.Model):
     id: str = rest_field()
     name: str = rest_field()
 
-def listWithPage(self, **kwargs: Any) -> Iterable["_models.User"]:
+def list_with_page(self, **kwargs: Any) -> Iterable["_models.User"]:
     ...
 ```
 
