use LifeCycle in visibility

--- a/website/src/content/docs/docs/howtos/Generate client libraries/07tcgcTypes.mdx
+++ b/website/src/content/docs/docs/howtos/Generate client libraries/07tcgcTypes.mdx
@@ -25,7 +25,7 @@ using TypeSpec.Http;
 namespace Contoso.WidgetManager;
 
 model Widget {
-  @visibility("read", "update")
+  @visibility(Lifecycle.Read, Lifecycle.Update)
   @path
   id: string;
 
