--- a/website/src/content/docs/docs/howtos/Generate client libraries/03convenient.mdx
+++ b/website/src/content/docs/docs/howtos/Generate client libraries/03convenient.mdx
@@ -22,7 +22,7 @@ namespace PetStoreNamespace;
 model OutputModel {
   /** Id of this object */
   @key
-  @visibility("read")
+  @visibility(Lifecycle.Read)
   name: string;
 }
 
