--- a/website/src/content/docs/docs/howtos/Generate client libraries/04renaming.mdx
+++ b/website/src/content/docs/docs/howtos/Generate client libraries/04renaming.mdx
@@ -27,7 +27,7 @@ namespace PetStoreNamespace;
 model InputModel {
   /** Id of this object */
   @key
-  @visibility("read")
+  @visibility(Lifecycle.Read)
   name: string;
 }
 
