--- a/website/src/content/docs/docs/howtos/Generate client libraries/10longRunningOperations.mdx
+++ b/website/src/content/docs/docs/howtos/Generate client libraries/10longRunningOperations.mdx
@@ -22,7 +22,7 @@ alias ResourceOperations = global.Azure.Core.ResourceOperations<NoConditionalReq
 model User {
   /** The name of user. */
   @key
-  @visibility("read")
+  @visibility(Lifecycle.Read)
   name: string;
 
   /** The role of user */
@@ -74,7 +74,7 @@ alias ResourceOperations = global.Azure.Core.ResourceOperations<NoConditionalReq
 model User {
   /** The name of user. */
   @key
-  @visibility("read")
+  @visibility(Lifecycle.Read)
   name: string;
 
   /** The role of user */
@@ -124,7 +124,7 @@ alias ResourceOperations = global.Azure.Core.ResourceOperations<NoConditionalReq
 model User {
   /** The name of user. */
   @key
-  @visibility("read")
+  @visibility(Lifecycle.Read)
   name: string;
 
   /** The role of user */
