add emptyStringAsNull decorator

--- a/website/src/content/docs/docs/libraries/typespec-client-generator-core/reference/index.mdx
+++ b/website/src/content/docs/docs/libraries/typespec-client-generator-core/reference/index.mdx
@@ -48,6 +48,7 @@ npm install --save-peer @azure-tools/typespec-client-generator-core
 - [`@clientName`](./decorators.md#@Azure.ClientGenerator.Core.clientName)
 - [`@clientNamespace`](./decorators.md#@Azure.ClientGenerator.Core.clientNamespace)
 - [`@convenientAPI`](./decorators.md#@Azure.ClientGenerator.Core.convenientAPI)
+- [`@emptyStringAsNull`](./decorators.md#@Azure.ClientGenerator.Core.emptyStringAsNull)
 - [`@flattenProperty`](./decorators.md#@Azure.ClientGenerator.Core.flattenProperty)
 - [`@operationGroup`](./decorators.md#@Azure.ClientGenerator.Core.operationGroup)
 - [`@override`](./decorators.md#@Azure.ClientGenerator.Core.override)
