add danger for formatting

--- a/website/src/content/docs/docs/howtos/Generate client libraries/13pagingOperations.mdx
+++ b/website/src/content/docs/docs/howtos/Generate client libraries/13pagingOperations.mdx
@@ -293,7 +293,9 @@ NOT_SUPPORTED
 
 ### Parameterized next links (against guidelines)
 
-> NOTE: Parameterized next links are against guidelines. Please don't follow this unless explicitly told to do so
+:::danger
+Parameterized next links are against guidelines. Please don't follow this unless explicitly told to do so
+:::
 
 In very rare cases, there are cases of next links that require parameterization. These cases exist outside of the Azure guidelines for paging, but must be supported for legacy reasons.
 
